docs(session): SWG #84/#93 resolved via JVM safepoint flags
Record the root cause (JVM<->Wine thread-suspension/safepoint bug, not Wine
networking/certs), the fix (3fad7e6 safepoint-suppression _JAVA_OPTIONS), the
live validation (login + content + patcher download past 1.8GB, no crash), the
capture-path fix (72f07be), and the reprioritized queue.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>